--- a/frontend/src/app/contact/contact.component.css
+++ b/frontend/src/app/contact/contact.component.css
@@ -30,3 +30,7 @@ padding: 0px;
     height: 50px;
     background-image: url("https://cdn-icons-png.flaticon.com/128/119/119591.png");
 }
+
+.text-green{
+    color: green;
+}
