--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-4" *ngIf="hidden == true">
+  <div class="col-sm-4">
     <nav class="navbar navbar-expand-lg bg-secondary">
       <div class="container">
         <button class="button-image" (click)="contact()"></button>
@@ -32,19 +32,17 @@
       </div>
 
     </div>
+
   </div>
 
-  <div *ngIf="hidden == false">
-    <app-contact></app-contact>
-  </div>
+  
+  
 
-  <div class="col-8 d-flex justify-content-center" *ngIf="hidden == true">
+  <div class="col-8 d-flex justify-content-center">
     <div class="d-flex flex-column">
       <h1 class="justify-content-center d-flex">WhatsApp Web</h1>
       <h5>Invia e ricevi messaggi senza mantenere il telefono connesso a Internet.</h5>
     </div>
-    
-    
   </div>
 
 </div>
