ingrandite icone, cambiato colori e risolti bug fix grafici

--- a/frontend/src/app/chats/chats.component.css
+++ b/frontend/src/app/chats/chats.component.css
@@ -31,10 +31,6 @@ padding: 0px;
     background-image: url("https://cdn-icons-png.flaticon.com/128/119/119591.png");
 }
 
-.text-green{
-    color: green;
-}
-
-.grey-contact{
+.grey-chat{
     background-color: #222e35;
 }
