--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -1,32 +1,36 @@
-<div class="row">
-    <div class="col-sm-4 mt-5">
-        <div class="container d-flex justify-content-beetween" style="height: 50px;">
-            <h5>Profilo</h5>
 
-            <button class="btn" style="margin-bottom: 25px;"><i class="bi bi-arrow-left-short" style="margin-left: 20px;"></i></button>
-            
-        </div>
+    <div class="row">
 
-        <div class="bg-secondary">
-            <div class="container d-flex justify-content-center">
-                <button class="button-image" style="height: 100px; width: 100px; margin-top: 10px;"></button>
+        <div class="col-sm-4 dark-contact" style="height: 705px;">
+            <div class="container d-flex justify-content-beetween">
+              
+            <div class="d-flex mt-5 justify-content-beetween align-items-start">
+                <button class="btn dark-contact" [routerLink]="['/home']"><i class="bi bi-arrow-left-short text-white"></i></button>
+                <h5 class="text-white">Profilo</h5>
             </div>
-            <p class="text-green fw-bold">Il tuo nome:</p>
-            <p>Salvo</p>
-
-            <p class="text-green fw-bold">Il tuo stato:</p>
-            <p>ciao</p>
+                
+            </div>
+    
+            <div class="container-fluid dark-contact">
+                <div class="container d-flex justify-content-center">
+                    <button class="button-image" style="height: 100px; width: 100px; margin-top: 10px;"></button>
+                </div>
+                <p class="text-green fw-bold">Il tuo nome:</p>
+                <p class="text-white">Salvo</p>
+    
+                <p class="text-green fw-bold">Il tuo stato:</p>
+                <p class="text-white">ciao</p>
+            </div>
+          
         </div>
-
-      
+    
+        <div class="col-sm-8 d-flex justify-content-center">
+            <div class="d-flex flex-column">
+                <h1 class="justify-content-center d-flex text-white">WhatsApp Web</h1>
+                <h5 class="text-white">Invia e ricevi messaggi senza mantenere il telefono connesso a Internet.</h5>
+            </div>
+    
+    
+        </div>
     </div>
 
-    <div class="col-8 d-flex justify-content-center">
-        <div class="d-flex flex-column">
-            <h1 class="justify-content-center d-flex">WhatsApp Web</h1>
-            <h5>Invia e ricevi messaggi senza mantenere il telefono connesso a Internet.</h5>
-        </div>
-
-
-    </div>
-</div>
