--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 body{
-    background-color: grey;
+    background-color: #222e35;
 }
+
+.dark-contact{
+    background-color: #111b21;
+}
+
